k8s/base/services/admin-tool/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-tool
  namespace: mypoly
spec:
  selector:
    app: admin-tool
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
