k8s/base/services/admin-tool/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-tool-ingress
  namespace: mypoly
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api-mypoly.kro.kr
      secretName: api-mypoly-kro-kr-tls
  rules:
    - host: api-mypoly.kro.kr
      http:
        paths:
          - path: /db-admin
            pathType: Prefix
            backend:
              service:
                name: admin-tool
                port:
                  number: 80
